fix: Reworked sidebar

--- a/pages/company/edit.company.module.scss
+++ b/pages/company/edit.company.module.scss
@@ -142,26 +142,69 @@
 }
 
 
-.formpart{
-    font-weight: 700;
-    line-height: 20px;
-    size: 14px;
-    letter-spacing: 1%;
-
-    .forminput{
-      background-color: white;
-      padding: 10px 14px 10px 14px;
-      border-radius: 8px;
-      box-shadow: 0px 1px 2px 0px #1018280D;
-      border-color: #D0D5DD;
+@media(max-width: 992px){
+    .formpart{
+        font-weight: 700;
+        line-height: 20px;
+        size: 14px;
+        letter-spacing: 1%;
+        width: 100%;
+    
+        .forminput{
+          background-color: white;
+          padding: 10px 14px 10px 14px;
+          border-radius: 8px;
+          box-shadow: 0px 1px 2px 0px #1018280D;
+          border-color: #D0D5DD;
+          width: 100% !important;
+        }
+    
+        .formselect{
+          background-color: white;
+          border-radius: 8px;
+          height: 44px;
+          box-shadow: 0px 1px 2px 0px #1018280D;
+          border-color: #D0D5DD;
+          font-weight: normal;
+          width: 100% !important;
+        }
     }
 
-    .formselect{
-      background-color: white;
-      border-radius: 8px;
-      box-shadow: 0px 1px 2px 0px #1018280D;
-      border-color: #D0D5DD;
-      font-weight: normal;
+    .addressrow{
+        display: flex;
+        flex-direction: column;
+    }
+}
+
+@media(min-width: 993px){
+    .formpart{
+        font-weight: 700;
+        line-height: 20px;
+        size: 14px;
+        letter-spacing: 1%;
+    
+        .forminput{
+          background-color: white;
+          padding: 10px 14px 10px 14px;
+          border-radius: 8px;
+          box-shadow: 0px 1px 2px 0px #1018280D;
+          border-color: #D0D5DD;
+        }
+    
+        .formselect{
+          background-color: white;
+          border-radius: 8px;
+          height: 44px;
+          box-shadow: 0px 1px 2px 0px #1018280D;
+          border-color: #D0D5DD;
+          font-weight: normal;
+        }
+    }
+
+    .addressrow{
+        display: flex;
+        flex-direction: row;
+        gap: 16px;
     }
 }
 
