--- a/components/Sidebar/sidebar.module.scss
+++ b/components/Sidebar/sidebar.module.scss
@@ -29,9 +29,7 @@
         z-index: 1;
         overflow: hidden;
         height: 100vh;
-        position: fixed;
         
-
         .logobox {
             display: flex;
             flex-direction: row;
@@ -46,7 +44,7 @@
             flex-direction: column;
             justify-content: flex-start;
             background-color: #101828;
-            height: 85%;
+            height: 80%;
 
             .primarymenu {
                 background-color: #101828;
@@ -91,10 +89,6 @@
                 }
             }
         }
-    }
-
-    .mobilesidebar{
-        position: fixed;
     }
 
     .layoutcontent{
@@ -164,6 +158,51 @@
 
     >:hover {
         cursor: pointer;
+    }
+}
+
+.mobiledrawer{
+    background-color: #101828;
+    .drawermenu{
+        display: flex;
+        flex-direction: column;
+       
+
+        .primarymenu {
+            background-color: #101828;
+            
+        }
+    }
+}
+
+@media (max-width: 992px) {
+    .sidebar{
+        display: none;
+    }
+
+    .mobilesidebarcontainer{
+        display: flex;
+        flex-direction: column;
+        width: 80px;
+        height: 100%;
+    }
+    .logobox {
+        padding-left: 20px;
+        padding-top: 16px;
+        padding-bottom: 16px;
+    }
+    .sidebariconsvg {
+        margin-right: 80px;
+        padding-left: 4px;
+    }
+
+    .sidebarbottomcontainer{
+        margin-top: auto;
+        margin-bottom: 16px;
+
+        .avatarcontainer{
+            padding-left: 20px;
+        }
     }
 }
 
