--- a/pages/forgot/password/password.forgot.module.scss
+++ b/pages/forgot/password/password.forgot.module.scss
@@ -53,6 +53,7 @@
             margin-bottom: 32px;
             width: 720px;
             text-align: center;
+            width: 88%;
         }
 
         .loginform {
