--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -21,6 +21,12 @@
     }
 }
 
+@media only screen and (max-width: 992px) {
+    .logincontainer{
+        height: 70vh;
+    }
+}
+
 
 .logincontainer{
     height: 96vh;
@@ -51,6 +57,8 @@
             font-size: 16px;
             line-height: 24px;
             margin-bottom: 32px;
+            width: 90%;
+            text-align: center;
         }
 
         .loginform {
