--- a/pages/monolog/index.module.scss
+++ b/pages/monolog/index.module.scss
@@ -21,7 +21,64 @@
       }
     }
 
-    .userinputformcontainer{
+    @media (max-width: 992px) {
+      .userinputform{
+        display: flex;
+        flex-direction: column;
+        gap: 32px;
+        width: 100%;
+
+        .userinputcardmain{
+          width: 100%;
+          border-radius: 12px;
+          border-color: #EAECF0;
+        }
+
+        .userinputcardsub{
+          width: 100%;
+          border-left-width: 0px;
+          border-radius: 12px;
+          border-color: #EAECF0;
+        }
+      }
+
+      .formfootercontainer{
+        min-height: 100px;
+  
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+  
+        .generatebuttonrow{
+          width: 360px;
+          height: 44px;
+          margin-bottom: 10px;
+          
+          button {
+              width: 360px;
+              height: 44px;
+              font-weight: 700;
+              font-size: 16px;
+              line-height: 24px;
+              padding: 10px 18px 10px 18px;
+  
+              .buttonicon > svg{
+                transform: translate(-1px, 4px);
+                fill: transparent;
+                color: inherit;
+                stroke: inherit;
+            }
+          }
+        }
+      }
+
+      .answercard{
+        border-radius: 12px;
+      }
+    }
+
+    @media (min-width: 993px) {
       .userinputform{
         display: flex;
         flex-direction: row;
@@ -39,7 +96,52 @@
           border-radius: 0px 12px 0px 0px;
           border-color: #EAECF0;
         }
+      }
 
+      .formfootercontainer{
+        border-width: 0px 1px 1px 1px;
+        border-style: solid;
+        border-color: #EAECF0;
+        min-height: 100px;
+        border-radius: 0px 0px 12px 12px;
+        background-color: white;
+  
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+  
+        .generatebuttonrow{
+          width: 360px;
+          height: 44px;
+          margin-bottom: 10px;
+          
+          button {
+              width: 360px;
+              height: 44px;
+              font-weight: 700;
+              font-size: 16px;
+              line-height: 24px;
+              padding: 10px 18px 10px 18px;
+  
+              .buttonicon > svg{
+                transform: translate(-1px, 4px);
+                fill: transparent;
+                color: inherit;
+                stroke: inherit;
+            }
+          }
+        }
+      }
+
+      .answercard{
+        border-radius: 12px 12px 0px 0px;
+      }
+    }
+
+    .userinputformcontainer{
+
+      .userinputform{
         .formpart{
           font-weight: 700;
           line-height: 20px;
@@ -90,10 +192,6 @@
         }
       }
 
-      .answercard{
-        border-radius: 12px 12px 0px 0px;
-      }
-
       .tokeninfo{
         background-color: #F2F4F7;
         padding: 12px;
@@ -116,48 +214,10 @@
           stroke: inherit;
         }
       }
-
-      
     }
 
     .hiddencontainer{
       display: none;
-    }
-
-    .formfootercontainer{
-      border-width: 0px 1px 1px 1px;
-      border-style: solid;
-      border-color: #EAECF0;
-      min-height: 100px;
-      border-radius: 0px 0px 12px 12px;
-      background-color: white;
-
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      align-items: center;
-
-      .generatebuttonrow{
-        width: 360px;
-        height: 44px;
-        margin-bottom: 10px;
-        
-        button {
-            width: 360px;
-            height: 44px;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 24px;
-            padding: 10px 18px 10px 18px;
-
-            .buttonicon > svg{
-              transform: translate(-1px, 4px);
-              fill: transparent;
-              color: inherit;
-              stroke: inherit;
-          }
-        }
-    }
     }
 }
 
