--- a/pages/register/register.module.scss
+++ b/pages/register/register.module.scss
@@ -54,6 +54,7 @@
             margin-bottom: 32px;
             width: 720px;
             text-align: center;
+            width: 90%;
         }
 
         .loginform {
