--- a/pages/setup/setup.module.scss
+++ b/pages/setup/setup.module.scss
@@ -44,6 +44,13 @@
 }
 
 
+@media (max-width: 992px) {
+    .formContainer{
+        margin-top: 100px;
+    }
+}
+
+
 .logincontainer{
     height: 96vh;
     display: flex;
@@ -59,13 +66,16 @@
         flex-direction: column;
         justify-content: center;
         align-items: center;
-        height: 80vh;
+        height: 100vh;
 
         .formtitle{
             margin-bottom: 20px;
             font-size: 32px;
             font-weight: 700;
-            line-height: 44px;
+            display: flex;
+            flex-direction: row;
+            justify-content: center;
+            text-align: center;
         }
 
         .formexplanation{
