fix: Merge error and styling

--- a/pages/profiles/list.profiles.module.scss
+++ b/pages/profiles/list.profiles.module.scss
@@ -109,6 +109,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: center;
+        gap: 16px;
     }
 }
 
@@ -118,6 +119,7 @@
         flex-direction: row;
         flex-wrap: wrap;
         justify-content: flex-start;
+        gap: 16px;
     }
 }
 
