--- a/components/RecommendBox/recommendbox.module.scss
+++ b/components/RecommendBox/recommendbox.module.scss
@@ -14,6 +14,7 @@
         padding: 12px;
 
         margin-bottom: 40px;
+        margin-top: 40px;
         
         box-shadow: 0px 4px 6px -2px #10182808;
         box-shadow: 0px 12px 16px -4px #10182829;
