--- a/components/RecommendBox/recommendbox.module.scss
+++ b/components/RecommendBox/recommendbox.module.scss
@@ -22,8 +22,9 @@
     
         .recommendlove{
             background-color: #EAECF0;
-            height: 48px;
-            width: 48px;
+            height: 35px;
+            max-width: 35px;
+            width: 30%;
             border-radius: 10px;
             
             display: flex;
@@ -31,37 +32,39 @@
             justify-content: center;
             align-items: center;
     
-            font-size: 24px;
+            font-size: 18px;
             color: #F24E1E;
-            display: none;
         }
     
         .recommendexplanation{
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             text-align: left;
-            font-size: 16px;
+            font-size: 11px;
             gap: 8px;
 
             .catchphrase{
                 font-weight: 700;
-                font-size: 16px;
+                font-size: 12px;
             }
 
-            .text{
+            /* .text{
                 display: none;
-            }
+            } */
         }
     
         .openrecdrawerrow{
             margin-left: auto;
+            max-width: 100px;
+            display: none;
     
             >button {
                 width: 100%;
-                height: 44px;
+                height: 33px;
                 background-color: #1478FD;
-                font-size: 14px;
+                font-size: 12px;
                 font-weight: 600;
+                text-align: center;
             }
         }
     
@@ -72,6 +75,7 @@
             flex-direction: column;
             justify-content: center;
             align-items: center;  
+            margin-left: auto;
             
             &:hover{
                 cursor: pointer;
