--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,14 +1,29 @@
+@media (max-width: 992px) {
+    .main{
+        display: flex;
+        flex-direction: column;
+        height: 100%;
+        padding-bottom: 200px;
+        margin-bottom: 200px;
+    }
+}
 
+@media (min-width: 993px) {
+    .main{
+        display: flex;
+        flex-direction: column;
+        height: 90vh;
+    }
+}
 
 .main {
-    display: flex;
-    flex-direction: column;
-    height: 93vh;
-
     .greetingrow {
+        width: 100%;
+        
         .greeting {
             font-size: 32px;
             font-weight: 700;
+            
         }
     
         .greeting_subtitle{
@@ -27,7 +42,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 90vh;
+        height: 100vh;
 
         @media (max-width: 992px) {
             .servicelist{
