--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -3,21 +3,21 @@
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
     .loginform {
-        width: 25%;
+        width: 20%;
     }
 }
 
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
     .loginform {
-        width: 25%;
+        width: 20%;
     }
 }
 
 /* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
     .loginform {
-        width: 25%;
+        width: 20%;
     }
 }
 
@@ -26,7 +26,6 @@
         height: 70vh;
     }
 }
-
 
 .logincontainer{
     height: 96vh;
@@ -62,7 +61,8 @@
         }
 
         .loginform {
-            width: 360px;
+            max-width: 360px;
+            width: 80%;
 
             .loginpart{
                 font-weight: 700;
@@ -89,12 +89,13 @@
             }
 
             .loginbutton{
-                width: 360px;
-                height: 44px;
-                margin-top: 32px;
+                width: 100%;
+                display: flex;
+                flex-direction: row;
+                justify-content: center;
                 
                 button {
-                    width: 360px;
+                    width: 100%;
                     height: 44px;
                     font-weight: 700;
                     font-size: 16px;
