--- a/pages/login/login.module.scss
+++ b/pages/login/login.module.scss
@@ -33,8 +33,42 @@
     flex-direction: column;
 
     .logorow{
-        height: 10vh;
         margin: 20px;
+        display: flex;
+        flex-direction: row;
+
+        .nav{
+            background-color: #F2F4F7;
+            display: flex;
+            flex-direction: row;
+            justify-content: flex-end;
+            margin-left: auto;
+            width: 100%;
+
+            >ul {
+                background-color: #F2F4F7;
+                border-bottom: none;
+            }
+
+            @media (max-width: 992px){
+                .navmenu {
+                    width: 80px;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-end;
+                }
+            }
+
+            @media (min-width: 993px){
+                .navmenu {
+                    width: 100%;
+                    display: flex;
+                    flex-direction: row;
+                    justify-content: flex-end;
+                }
+            }
+
+        }
     }
 
     .formContainer{
@@ -93,6 +127,7 @@
                 display: flex;
                 flex-direction: row;
                 justify-content: center;
+                margin-top: 32px;
                 
                 button {
                     width: 100%;
@@ -140,4 +175,15 @@
     flex-direction: row;
     justify-content: center;
     color: #475467;
+}
+
+.headericon> svg{
+    font-size: 24px;
+    fill: transparent;
+    color: inherit;
+    stroke: inherit;
+
+    > path {
+        stroke: black;
+    }
 }
