fix: Some styling issues were resolved

--- a/components/HomeSidebar/homesidebar.module.scss
+++ b/components/HomeSidebar/homesidebar.module.scss
@@ -307,6 +307,10 @@
         .closesidebar{
             color: white;
             font-size: 18px;
+
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 }
