--- a/pages/company/edit.company.module.scss
+++ b/pages/company/edit.company.module.scss
@@ -235,11 +235,24 @@
     }
 }
 
-.useractions{
-    display: flex;
-    flex-direction: row;
-    gap: 16px;
-    font-size: 16px;
+@media (max-width: 992px){
+    .useractions{
+        display: flex;
+        flex-direction: row;
+        justify-content: flex-start;
+        gap: 32px;
+        font-size: 16px;
+        margin-top: 16px;
+    }
+}
+
+@media (min-width: 993px){
+    .useractions{
+        display: flex;
+        flex-direction: row;
+        gap: 16px;
+        font-size: 16px;
+    }
 }
 
 .deleteMemberRow{
