--- a/pages/dialog/index.module.scss
+++ b/pages/dialog/index.module.scss
@@ -10,6 +10,20 @@
         display: flex;
         flex-direction: row;
         gap: 16px;
+
+        @media (max-width: 992px){
+          .msg {
+            font-size: large;
+            font-weight: bold;
+          }
+        }
+
+        @media (min-width: 993px){
+          .msg {
+            font-size: 32px;
+            font-weight: bold;
+          }
+        }
       }
 
       .welcomeseperator{
@@ -51,15 +65,9 @@
   
         .generatebuttonrow{
           margin-bottom: 44px;
+          margin-top: 44px;
           
           button {
-              width: 360px;
-              height: 44px;
-              font-weight: 700;
-              font-size: 16px;
-              line-height: 24px;
-              padding: 10px 18px 10px 18px;
-  
               .buttonicon > svg{
                 transform: translate(-1px, 4px);
                 fill: transparent;
@@ -110,14 +118,9 @@
   
         .generatebuttonrow{
           margin-bottom: 44px;
+          margin-top: 44px;
           
           button {
-              width: 360px;
-              height: 44px;
-              font-weight: 700;
-              font-size: 16px;
-              line-height: 24px;
-              padding: 10px 18px 10px 18px;
   
               .buttonicon > svg{
                 transform: translate(-1px, 4px);
@@ -189,7 +192,8 @@
       .tokeninfo{
         background-color: #F2F4F7;
         padding: 12px;
-        width: 330px;
+        max-width: 330px;
+        width: 100%;
         border-radius: 8px;
         margin-top: 30px;
         font-weight: 700;
@@ -220,14 +224,9 @@
 
       .generatebuttonrow{
         margin-bottom: 44px;
+        margin-top: 44px;
         
         button {
-            width: 360px;
-            height: 44px;
-            font-weight: 700;
-            font-size: 16px;
-            line-height: 24px;
-            padding: 10px 18px 10px 18px;
 
             .buttonicon > svg{
               transform: translate(-1px, 4px);
