--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -5,6 +5,21 @@
         height: 100%;
         padding-bottom: 200px;
         margin-bottom: 200px;
+
+        .greetingrow {
+            width: 100%;
+            
+            .greeting {
+                font-size: large;
+                font-weight: 700;
+                
+            }
+        
+            .greeting_subtitle{
+                font-size: 24px;
+                font-weight: 700;
+            }
+        }
     }
 }
 
@@ -13,24 +28,25 @@
         display: flex;
         flex-direction: column;
         height: 90vh;
+
+        .greetingrow {
+            width: 100%;
+            
+            .greeting {
+                font-size: 32px;
+                font-weight: 700;
+                
+            }
+        
+            .greeting_subtitle{
+                font-size: 24px;
+                font-weight: 700;
+            }
+        }
     }
 }
 
 .main {
-    .greetingrow {
-        width: 100%;
-        
-        .greeting {
-            font-size: 32px;
-            font-weight: 700;
-            
-        }
-    
-        .greeting_subtitle{
-            font-size: 24px;
-            font-weight: 700;
-        }
-    }
 
     .dividerrow{
         >* {
