--- a/pages/register/register.module.scss
+++ b/pages/register/register.module.scss
@@ -1,29 +1,8 @@
 
 
-/* Medium devices (landscape tablets, 768px and up) */
-@media only screen and (min-width: 768px) {
-    .loginform {
-        width: 25%;
-    }
-}
-
-/* Large devices (laptops/desktops, 992px and up) */
-@media only screen and (min-width: 992px) {
-    .loginform {
-        width: 25%;
-    }
-}
-
-/* Extra large devices (large laptops and desktops, 1200px and up) */
-@media only screen and (min-width: 1200px) {
-    .loginform {
-        width: 25%;
-    }
-}
-
 
 .logincontainer{
-    height: 96vh;
+    height: 100vh;
     display: flex;
     flex-direction: column;
 
@@ -73,6 +52,7 @@
         align-items: center;
         height: 100vh;
         margin-bottom: 100px;
+        margin-top: 32px;
 
         .formtitle{
             margin-bottom: 20px;
@@ -88,11 +68,12 @@
             margin-bottom: 32px;
             width: 720px;
             text-align: center;
-            width: 90%;
+            width: 50%;
         }
 
         .loginform {
-            width: 360px;
+            max-width: 360px;
+            width: 80%;
 
             .loginpart{
                 font-weight: 700;
@@ -136,18 +117,11 @@
             }
 
             .loginbutton{
-                width: 360px;
+                width: 100%;
                 height: 44px;
                 margin-top: 32px;
                 
-                button {
-                    width: 360px;
-                    height: 44px;
-                    font-weight: 700;
-                    font-size: 16px;
-                    line-height: 24px;
-                    padding: 10px 18px 10px 18px;
-                }
+                
             }
         }
 
