fix: Styling etc

--- a/components/Sidebar/sidebar.module.scss
+++ b/components/Sidebar/sidebar.module.scss
@@ -205,6 +205,10 @@
         .avatarcontainer{
             padding-left: 20px;
             margin-top: 5px;
+
+            &:hover {
+                cursor: pointer;
+            }
         }
     }
 }
