--- a/components/Forms/EditUserForm/edituserform.module.scss
+++ b/components/Forms/EditUserForm/edituserform.module.scss
@@ -29,3 +29,11 @@
     box-shadow: 0px 1px 2px 0px #1018280D;
     border-color: #D0D5DD;
 }
+
+@media (max-width: 992px){
+    .multiformrow{
+        display: flex;
+        flex-direction: column;
+        
+    }
+}
