--- a/components/HomeSidebar/homesidebar.module.scss
+++ b/components/HomeSidebar/homesidebar.module.scss
@@ -27,8 +27,8 @@
         background-color: #101828;
         z-index: 1;
         overflow: hidden;
-/*         height: 100vh;
- */
+        height: 100vh;
+ 
         .logobox {
             display: flex;
             flex-direction: row;
