--- a/pages/usage/usage.module.scss
+++ b/pages/usage/usage.module.scss
@@ -427,3 +427,9 @@
     margin-top: 30px;
     margin-bottom: 30px;
 }
+
+.nopurchase{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
