--- a/pages/usage/usage.module.scss
+++ b/pages/usage/usage.module.scss
@@ -22,6 +22,12 @@
                     display: flex;
                     flex-direction: column;
                     justify-content: center;
+
+                    .stattitlerow{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
+                    }
     
                     .tokeninformation{
                         font-size: 14px;
@@ -149,6 +155,12 @@
                         font-size: 14px;
                         color: #8e8e93;
                         margin-left: 10px;
+                    }
+
+                    .stattitlerow{
+                        display: flex;
+                        flex-direction: row;
+                        justify-content: space-between;
                     }
     
                     .quotatitle{
@@ -287,6 +299,31 @@
 .listarrow {
     font-size: 10px;
     margin-right: 10px;
+}
+
+.stattitlerow{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+.switchyearrow{
+    display: flex;
+    flex-direction: row;
+
+    .yearswitchbutton{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+
+    .left {
+        border-radius: 8px 0px 0px 8px;
+    }
+
+    .right {
+        border-radius: 0px 8px 8px 0px;
+    }
 }
 
 
