feat: Added an Excel-Assistant

--- a/components/AssistantBase/AssistantBase.module.scss
+++ b/components/AssistantBase/AssistantBase.module.scss
@@ -167,7 +167,10 @@
     }
 
     .answer{
-      white-space: pre-line;
+      //white-space: pre-line;
+      > ol {
+        margin-left: 20px;
+      }
     }
 
     .clipboardextra{
