--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -2,7 +2,7 @@
     .main{
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: 100vh;
         padding-bottom: 200px;
         margin-bottom: 200px;
 
@@ -58,7 +58,7 @@
         display: flex;
         flex-direction: column;
         justify-content: space-between;
-        height: 100vh;
+        height: 80svh;
 
         @media (max-width: 992px) {
             .servicelist{
