--- a/components/AssistantBase/AssistantBase.module.scss
+++ b/components/AssistantBase/AssistantBase.module.scss
@@ -379,7 +379,6 @@
     .tokeninfo{
       background-color: #F2F4F7;
       padding: 12px;
-      max-width: 330px;
       width: 100%;
       border-radius: 8px;
       margin-top: 30px;
@@ -629,4 +628,9 @@ margin-bottom: 20px;
     gap: 16px;
     color: #667085;
   }
+}
+
+.disclaimer{
+  margin-top: 20px;
+  margin-bottom: 20px;
 }
