--- a/components/RecommendBox/recommendbox.module.scss
+++ b/components/RecommendBox/recommendbox.module.scss
@@ -166,13 +166,14 @@
 
             .catchphrase{
                 font-weight: 700;
-                font-size: 20px;
+                font-size: 1.5vw;
             }
 
             .text{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
+                font-size: 1vw;
             }
         }
     
