--- a/components/RecommendBox/recommendbox.module.scss
+++ b/components/RecommendBox/recommendbox.module.scss
@@ -166,14 +166,14 @@
 
             .catchphrase{
                 font-weight: 700;
-                font-size: 1.5vw;
+                font-size: 20px;
             }
 
             .text{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                font-size: 1vw;
+                font-size: 16px;
             }
         }
     
