--- a/components/HomeSidebar/homesidebar.module.scss
+++ b/components/HomeSidebar/homesidebar.module.scss
@@ -149,6 +149,8 @@
             padding: 30px 16px 0px 16px;
             height: 100%;
 
+            justify-content: space-between;
+
             font-size: 16px;
             font-weight: 500;
 
@@ -200,6 +202,7 @@
             padding-right: 30px;
             background: #F2F4F7;
             width: 100%;
+            overflow-y: scroll;
         }
     }
 
