--- a/components/RecommendBox/recommendbox.module.scss
+++ b/components/RecommendBox/recommendbox.module.scss
@@ -10,11 +10,10 @@
         width: 100%;
         border: 1px #EAECF0 solid;
         border-radius: 12px;
-        height: 72px;
         padding: 12px;
 
         margin-bottom: 40px;
-        margin-top: 40px;
+        margin-top: auto;
         
         box-shadow: 0px 4px 6px -2px #10182808;
         box-shadow: 0px 12px 16px -4px #10182829;
@@ -46,6 +45,7 @@
             .catchphrase{
                 font-weight: 700;
                 font-size: 12px;
+                color: black
             }
         }
     
@@ -135,17 +135,21 @@
         width: 100%;
         border: 1px #EAECF0 solid;
         border-radius: 12px;
-        height: 72px;
         padding: 12px;
+
+        margin-bottom: 20px;
+        margin-top: 100%;
         
         box-shadow: 0px 4px 6px -2px #10182808;
         box-shadow: 0px 12px 16px -4px #10182829;
+
+        cursor: pointer;
     
     
         .recommendlove{
             background-color: #EAECF0;
-            height: 48px;
-            width: 48px;
+            height: 40px;
+            width: 60px;
             border-radius: 10px;
             
             display: flex;
@@ -159,21 +163,21 @@
     
         .recommendexplanation{
             display: flex;
-            flex-direction: row;
+            flex-direction: column;
             text-align: left;
             font-size: 16px;
             gap: 8px;
 
             .catchphrase{
                 font-weight: 700;
-                font-size: 20px;
+                font-size: 14px;
             }
 
             .text{
                 display: flex;
                 flex-direction: column;
                 justify-content: center;
-                font-size: 16px;
+                font-size: 12px;
             }
         }
     
