--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -27,13 +27,19 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        margin-top: 100px;
     }
 
     .comingsoon{
-        margin-top: 100px;
-        height: 300px;
         width: 300px;
         opacity: 0.5;
+    }
+
+    .comingsooncard{    
+        border-radius: 12px;
+        margin-bottom: 20px;
+        box-shadow: 0px -1px 2px 0px #1018280F;
+        box-shadow: 0px -1px 3px 0px #1018281A;    
     }
     
     .builder{
@@ -47,6 +53,10 @@
             padding-left: 10px;
             display: flex;
             flex-direction: column;
+
+            .builderheadline{
+                margin-bottom: 20px;
+            }
     
             .buttonsection{
                 margin-top: 50px;
@@ -54,6 +64,16 @@
                 display: flex;
                 flex-direction: column;
                 justify-content: space-between;
+            }
+
+            .builderbutton{
+                width: 100%;
+                height: 44px;
+                font-weight: 700;
+                font-size: 15px;
+                line-height: 24px;
+                padding: 10px 18px 10px 18px;
+                font-weight: bold;
             }
         }
     }
@@ -87,17 +107,27 @@
         }
     }
 
-    .comingsoon{
+    .comingsoonrow{
         margin-top: 100px;
+    }
+
+    .comingsoon{
         width: 100%;
-        height: 300px;
         opacity: 0.5;
+
+        
+    }
+
+    .comingsooncard{
+        border-radius: 12px;
+        margin-bottom: 20px;
+        box-shadow: 0px -1px 2px 0px #1018280F;
+        box-shadow: 0px -1px 3px 0px #1018281A;
     }
     
     .builder{
         display: flex;
         flex-direction: row;
-        height: 500px;
     
         .buildercontent{
             width: 50%;
@@ -105,12 +135,16 @@
             padding-left: 10px;
             display: flex;
             flex-direction: column;
+
+            .builderheadline{
+                margin-bottom: 20px;
+            }
     
             .buttonsection{
+                padding-right: 15px;
                 margin-top: 50px;
-                height: 100px;
                 display: flex;
-                flex-direction: column;
+                flex-direction: row;
                 justify-content: space-between;
             }
         }
@@ -118,14 +152,15 @@
         
     
         .builderteaser{
-            background-image: url("https://app.business.siteware.io/ogimage.jpg");
+            background-image: url("/builder.png");
             background-position: center;
             background-size: cover;
-            height: 100%;
+            height: 360px;
             width: 50%;
             padding-left: 50px;
             padding-right: 10px;
             border-radius: 20px;
+
         }
     }
 
@@ -133,6 +168,16 @@
         display: flex;
         flex-direction: row;
         justify-content: center;
+    }
+
+    .builderbutton{
+        width: 45%;
+        height: 44px;
+        font-weight: 700;
+        font-size: 15px;
+        line-height: 24px;
+        padding: 10px 18px 10px 18px;
+        font-weight: bold;
     }
 }
 
