Feat: Added a redo button, added git versioning fixed some minor bugs

--- a/pages/account/account.module.scss
+++ b/pages/account/account.module.scss
@@ -129,7 +129,6 @@
         font-weight: 700;
         line-height: 20px;
         size: 14px;
-        letter-spacing: 1%;
     }
 
     .logininput{
@@ -164,4 +163,9 @@
         justify-content: center;
 
     }
+}
+
+.version {
+    margin-top: 50pt;
+    color: #D0D5DD;
 }
