--- a/components/AssistantBase/AssistantBase.module.scss
+++ b/components/AssistantBase/AssistantBase.module.scss
@@ -38,7 +38,10 @@
     .generatebuttonrow{
       margin-bottom: 44px;
       margin-top: 44px;
-      
+      display: flex;
+      flex-direction: row;
+      gap: 32px;
+
       button {
           
 
@@ -97,6 +100,9 @@
     .generatebuttonrow{
       margin-bottom: 44px;
       margin-top: 44px;
+      display: flex;
+      flex-direction: row;
+      gap: 32px;
       
       button {
           
