--- a/pages/analytics/analytics.module.scss
+++ b/pages/analytics/analytics.module.scss
@@ -1,6 +1,34 @@
 
 .cardsection{
   margin-bottom: 30px;
+
+  .stats{
+
+    .statsrow{
+      width: 100%;
+      display: flex;
+      flex-direction: row;
+      max-height: 200px;
+
+      .statbox{
+        width: 33%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        .lastregister{
+          font-weight: 800;
+          font-size: 24px;
+        }
+
+        .amountofregisters{
+          font-weight: 800;
+          font-size: 24px;
+        }
+      }
+    }
+  }
 }
 
 .company {
