--- a/components/Assistants/ChatAssistant/chatassistant.module.scss
+++ b/components/Assistants/ChatAssistant/chatassistant.module.scss
@@ -660,10 +660,19 @@
 
 .inputformitem{
   width: 90%;
+  margin-bottom: 0px;
 }
 
 .inputformbuttonitem{
   width: 10%;
+
+  display: inline-block;
+}
+
+.inputformbutton{
+  display: inline-block;
+  height: auto;
+  max-height: 50px;
 }
 
 .msgrow{
@@ -697,7 +706,7 @@
 .msgcontainer{
   display: flex;
   flex-direction: column;
-  width: 30%;
+  width: 40%;
 
   .msgsender{
     margin-bottom: 5px;
@@ -710,7 +719,7 @@
   margin-bottom: 25px;
   padding-top: 25px;
   padding-bottom: 25px;
-  padding-left: 10px;
-  padding-right: 10px;
+  padding-left: 20px;
+  padding-right: 20px;
   border-radius: 12px;
 }
