--- a/components/EditorSidebar/editorsidebar.module.scss
+++ b/components/EditorSidebar/editorsidebar.module.scss
@@ -41,7 +41,6 @@
 @media only screen and (min-width: 1500px) {
   /* CSS Styling */
   .layoutcontent{
-    margin-left: 80px;
   }
 
 
@@ -57,6 +56,7 @@
     flex-direction: row;
     align-items: center;
     padding: 0 15px;
+    background-color: #eaeaea;
 
     .headerinteraction{
       margin-left: auto;
@@ -82,12 +82,13 @@
       display: flex;
       flex-direction: column;
       justify-content: center;
+      margin-right: 30px;
     }
 
   }
 
   .sidebar {
-    background-color: #101828;
+    background-color: #eaeaea;
     z-index: 1;
     overflow: hidden;
     height: 100%;
@@ -106,11 +107,11 @@
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      background-color: #101828;
+      background-color: #eaeaea;
       height: 88%;
 
       .primarymenu {
-        background-color: #101828;
+        background-color: #eaeaea;
       }
 
       .sidebarbottomcontainer{
@@ -118,7 +119,7 @@
         margin-bottom: 16px;
 
         .secondarymenu {
-          background-color: #101828;
+          background-color: #eaeaea;
           margin-top: auto;
         }
       }
@@ -160,6 +161,7 @@
       background: #F2F4F7;
       >* {
         border: none !important;
+        z-index: 1;
       }
     }
   }
@@ -220,14 +222,14 @@
 }
 
 .mobiledrawer{
-  background-color: #101828;
+  background-color: #eaeaea;
   .drawermenu{
     display: flex;
     flex-direction: column;
 
 
     .primarymenu {
-      background-color: #101828;
+      background-color: #eaeaea;
 
     }
   }
@@ -266,4 +268,79 @@
 
 .profileava{
   background-color: white;
+}
+
+.editorHeader{
+  background-color: #eaeaea;
+}
+
+.backbutton {
+  display: flex;
+  margin-right: 30px;
+  width: 40px;
+  height: 40px;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
+  >* {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+}
+
+.nameinput {
+  width: 30%;
+
+  >input {
+    background-color: transparent;
+    border-top: none;
+    border-right: none;
+    border-left: none;
+    border-radius: 0px;
+    border-bottom: #d9d9d9 1px solid;
+    color: #c9c9c9;
+
+    &:focus-within {
+      background-color: transparent;
+      border-bottom: #d9d9d9 2px solid;
+      color: black;
+    }
+
+    &:focus {
+      background-color: transparent;
+      box-shadow: none;
+      border-color: #d9d9d9;
+    }
+
+    &:hover {
+      background-color: transparent;
+      border-bottom: #d9d9d9 2px solid;
+      color: black;
+    }
+  }
+}
+
+.headerActions{
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  align-items: center;
+
+  .additionalSettings{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    margin-right: 30px;
+
+    .settingsname{
+      margin-right: 15px;
+    }
+  }
 }
