--- a/components/EditorSidebar/editorsidebar.module.scss
+++ b/components/EditorSidebar/editorsidebar.module.scss
@@ -303,7 +303,7 @@
     border-left: none;
     border-radius: 0px;
     border-bottom: #d9d9d9 1px solid;
-    color: #c9c9c9;
+    color: black;
 
     &:focus-within {
       background-color: transparent;
@@ -341,6 +341,18 @@
 
     .settingsname{
       margin-right: 15px;
+    }
+  }
+}
+
+.assistantSettings{
+  margin-left: 30px;
+
+  .settingsbutton{
+    font-size: 20px;
+
+    &:hover{
+      cursor: pointer;
     }
   }
 }
